--- a/chat.html
+++ b/chat.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat de Pedidos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/chat.css" rel="stylesheet">
+    <link href="./chat.css" rel="stylesheet">
 </head>
 <body>
     <div class="container-fluid py-4">
         <div class="row">
             <!-- Lista de clientes -->
             <div class="col-md-4 border-end">
-                <h3>Clientes</h3>
+                <h3 id="customersTitle">Clientes</h3>
                 <div class="list-group" id="customerList">
                     <!-- La lista de clientes se cargará dinámicamente -->
                 </div>
@@ -27,12 +27,22 @@
                     <div class="chat-messages p-3" id="messageArea">
                         <!-- Los mensajes se cargarán dinámicamente -->
                     </div>
-                    <div class="chat-input border-top p-3">
-                        <form id="messageForm" class="d-flex">
+                    <div class="chat-input border-top p-3"> <!-- agregado toda esta clase -->
+                        <form id="messageForm" class="d-flex align-items-center">
                             <input type="text" class="form-control me-2" id="messageInput" placeholder="Escribe un mensaje...">
+                            <input type="file" id="imageInput" class="d-none">
+                            <label for="imageInput" class="btn btn-secondary me-2">
+                                <img src="https://cdn.icon-icons.com/icons2/1993/PNG/512/frame_gallery_image_images_photo_picture_pictures_icon_123209.png" 
+                                     alt="Subir imagen">
+                            </label>
                             <button type="submit" class="btn btn-primary">Enviar</button>
                         </form>
                     </div>
+                    <!-- Área donde se muestra el nombre y el botón de eliminar de la imagen cargada -- agregado -->
+                    <div id="imagePreview" class="mt-3 d-none">
+                        <p id="imageName"></p>
+                        <button id="removeImage" class="btn btn-danger btn-sm">X</button>
+                    </div>                    
                 </div>
                 <div id="noChatSelected" class="text-center p-5">
                     <h4>Selecciona un cliente para iniciar el chat</h4>
@@ -40,6 +50,6 @@
             </div>
         </div>
     </div>
-    <script src="js/chat.js"></script>
+    <script src="./chat.js"></script>
 </body>
 </html>
