--- a/chat.html
+++ b/chat.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat de Pedidos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="./chat.css" rel="stylesheet">
+    <link href="css/chat.css" rel="stylesheet">
 </head>
 <body>
     <div class="container-fluid py-4">
@@ -50,6 +50,6 @@
             </div>
         </div>
     </div>
-    <script src="./chat.js"></script>
+    <script src="js/chat.js"></script>
 </body>
 </html>
