--- a/chat.html
+++ b/chat.html
@@ -13,7 +13,8 @@
             <!-- Lista de clientes -->
             <div class="col-md-4 border-end">
                 <h3 id="customersTitle">Clientes</h3>
-                <div class="list-group" id="customerList">
+                <input type="text" id="searchInput" class="form-control mb-3" placeholder="Buscar cliente por nombre...">
+                <div class="list-group chat-list" id="customerList">
                     <!-- La lista de clientes se cargará dinámicamente -->
                 </div>
             </div>
@@ -30,7 +31,7 @@
                     <div class="chat-input border-top p-3"> <!-- agregado toda esta clase -->
                         <form id="messageForm" class="d-flex align-items-center">
                             <input type="text" class="form-control me-2" id="messageInput" placeholder="Escribe un mensaje...">
-                            <input type="file" id="imageInput" class="d-none">
+                            <input type="file" id="imageInput" class="d-none" accept=".png, .jpg, .jpeg">
                             <label for="imageInput" class="btn btn-secondary me-2">
                                 <img src="https://cdn.icon-icons.com/icons2/1993/PNG/512/frame_gallery_image_images_photo_picture_pictures_icon_123209.png" 
                                      alt="Subir imagen">
