--- a/inventario.html
+++ b/inventario.html
@@ -9,17 +9,17 @@
 </head>
 <body>
     <div class="container-fluid py-4">
-        <h2>Gestión de Inventario</h2>
-        
-        <!-- Botón para agregar nuevo producto -->
-        <button class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#addProductModal">
-            Agregar Producto
-        </button>
+        <div class="d-flex justify-content-between align-items-center mb-4">
+            <h2>Gestión de Inventario</h2>
+            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addProductModal">
+                <i class="bi bi-plus-lg"></i> Agregar Producto
+            </button>
+        </div>
 
         <!-- Tabla de inventario -->
         <div class="table-responsive">
-            <table class="table table-striped">
-                <thead>
+            <table class="table table-hover">
+                <thead class="table-light">
                     <tr>
                         <th>ID</th>
                         <th>Producto</th>
@@ -36,32 +36,35 @@
         </div>
 
         <!-- Modal para agregar/editar producto -->
-        <div class="modal fade" id="addProductModal" tabindex="-1">
+        <div class="modal fade" id="addProductModal" tabindex="-1" aria-labelledby="modalTitle" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title">Agregar Producto</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                        <h5 class="modal-title" id="modalTitle">Agregar Producto</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
                         <form id="productForm">
                             <div class="mb-3">
-                                <label class="form-label">Nombre del Producto</label>
+                                <label for="productName" class="form-label">Nombre del Producto</label>
                                 <input type="text" class="form-control" id="productName" required>
                             </div>
                             <div class="mb-3">
-                                <label class="form-label">Categoría</label>
+                                <label for="productCategory" class="form-label">Categoría</label>
                                 <select class="form-select" id="productCategory" required>
                                     <!-- Las categorías se cargarán dinámicamente -->
                                 </select>
                             </div>
                             <div class="mb-3">
-                                <label class="form-label">Stock</label>
-                                <input type="number" class="form-control" id="productStock" required>
+                                <label for="productStock" class="form-label">Stock</label>
+                                <input type="number" class="form-control" id="productStock" min="0" required>
                             </div>
                             <div class="mb-3">
-                                <label class="form-label">Precio</label>
-                                <input type="number" class="form-control" id="productPrice" step="0.01" required>
+                                <label for="productPrice" class="form-label">Precio</label>
+                                <div class="input-group">
+                                    <span class="input-group-text">S/</span>
+                                    <input type="number" class="form-control" id="productPrice" step="0.01" min="0" required>
+                                </div>
                             </div>
                         </form>
                     </div>
@@ -72,7 +75,28 @@
                 </div>
             </div>
         </div>
+
+        <!-- Modal de confirmación para eliminar -->
+        <div class="modal fade" id="deleteConfirmModal" tabindex="-1" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Confirmar Eliminación</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p>¿Está seguro que desea eliminar este producto?</p>
+                        <p class="text-danger">Esta acción no se puede deshacer.</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                        <button type="button" class="btn btn-danger" id="confirmDelete">Eliminar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/inventario.js"></script>
 </body>
 </html>
